# Pedestrian-Trajectory-Prediction-with-Federated-Learning

./: .gitignore  README.md  client_app.py  final_model.pt  pyproject.toml  server_app.py  sort_pedestrians.py  sorted_by_avg_group_size.txt  sorted_by_fraction_time_in_group.txt  task.py
datasets/sorted_datasets/: non_sorted.txt  sorted_by_density.txt
datasets/velocity_data/: biwi_eth_wv.txt  biwi_hotel_wv.txt  calculate_velocity.py  crowds_zara01_wv.txt  crowds_zara02_wv.txt  crowds_zara03_wv.txt  students001_wv.txt  students003_wv.txt  uni_examples_wv.txt
quickstart-pytorch/: final_model.pt
